# cyheadgen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: fomatting-action.yaml  testing-workflow.yaml
src/cyheadgen/: __init__.py  _lexer.py  _parser.py  ast.py  generator.py  lexer.py  parser.py
tests/: test_generator.py  test_lexer.py  test_parser.py
